# turing

./: .gitignore  Makefile  README.md  dune-project
json/: lang_02n.json  lang_0n1n.json  palindrome.json  unary_add.json
machines/: 02n.json  0n1n.json  lang_0n1n.json  palindrome.json  unary_add.json
src/: cli.ml  cli.mli  display.ml  display.mli  dune  main.ml  parse.ml  parse.mli  simulate.ml  simulate.mli  turing.ml  types.ml  validate.ml  validate.mli
test/: 02n.sh  0n1n.sh  lang_02n.sh  lang_0n1n.sh  palindrome.sh  unary_add.sh  unary_sub.sh
